styles.css
:root {
  --light-red: hsl(356, 100%, 66%);
  --v-light-red: hsl(355, 100%, 74%);
  --v-drk-blue: hsl(208, 49%, 24%);
  --white: hsl(0, 0%, 100%);
  --grey-blue: hsl(240, 2%, 79%);
  --v-drk-grey-blue: hsl(207, 13%, 34%);
  --v-drk-blck-blue: hsl(240, 10%, 16%);
  --v-l-red: hsl(13, 100%, 72%);
  --l-red: hsl(353, 100%, 62%);
  --v-d-grey-blue: hsl(237, 17%, 21%);
  --v-d-d-blue: hsl(237, 23%, 32%);

  --ff-ubuntu: 'Ubuntu', sans-serif;
  --ff-overpass: 'Overpass', sans-serif;
}

html {
  box-sizing: border-box;
}

*, *::before, *::after {
  box-sizing: inherit;
}

body {
  font-family: var(--ff-overpass);
  font-size: 1rem;
  font-weight: 300;
  margin: 0;
  min-height: 100vh;
  padding: 0;
}

h1 {
  font-size: 2.25rem;
  font-weight: 400;
}

h2 {
  font-weight: 400;
}

.sec-1-title {
  color: var(--v-drk-blue);
  font-size: 1.75rem;
}

.sec-2-title {
  color: var(--white);
  font-size: 2rem;
}

h3 {
  color: var(--v-drk-blue);
  font-size: 1.5rem;
  font-weight: 500;
}

h4 {
  font-weight: 300;
  margin: 0;
}

.mobile-header {
  display: flex;
}

.home-top {
  background-image: linear-gradient(180deg, var(--v-l-red), var(--l-red));
  border-bottom-left-radius: 82px;
  color: var(--white);
  padding: 3em 1.75em 6em;
  text-align: center;
}

.menu {
  display: none;
}

.menu.show {
  display: initial;
}

.btn-container {
  background-color: var(--white);
  border-radius: 0 0 5px 5px;
  padding: 1em 0;
}

.burger-menu {
  all: unset;
  margin-left: auto;
}

.nav-list {
  background-color: var(--white);
  border-bottom: 1px solid var(--grey-blue);
  border-radius: 5px 5px 0 0;
  margin: 2.5em 0 0;
  padding: 2em 0 1em;
}

a {
  text-decoration-line: none;
  /* font-weight: 100; */
}

ul {
  padding: 0;
}

ul li {
  list-style-type: none;
}

.btn {
  font-family: var(--ff-ubuntu);
  font-size: 1rem;
  font-weight: 500;
  border-radius: 100px;
  padding: .75em 1em;
}

#start-btn {
  border: none;
  color: var(--light-red);
  margin-right: 1em;
}

#learn-btn {
  background-color: transparent;
  border: 1px solid var(--white);
  color:var(--white);
  padding-left:  1.5em;
  padding-right:  1.5em;
}

#login-btn {
  background-color: transparent;
  border: none;
  color: var(--v-drk-blue);
  display: block;
  font-family: var(--ff-overpass);
  font-size: 1.25rem;
  font-weight: 400;
  margin: 1em auto;
}

#sign-btn {
  background-image: linear-gradient(90deg, var(--v-l-red), var(--l-red));
  border: none;
  color: var(--white);
  display: block;
  margin: 0 auto;
  padding: 1em 3em;
}

.container {
  align-items: center;
  display: flex;
  flex-direction: column;
  padding: 0 10%;
}

.sec-1-title {
  order: -2;
}

.sec-1-img-container {
  order: -1;
}

.sec-2 {
  background-image: linear-gradient(var(--v-d-grey-blue), var(--v-d-d-blue));
  border-bottom-left-radius: 80px;
  border-top-right-radius: 90px;
  color: var(--white);
  padding-bottom: 6em;
}

.sec-2-img {
  width: 400px;
}

.footer {
  background-color: var(--v-drk-blck-blue);
  border-top-right-radius: 90px;
  font-family: var(--ff-ubuntu);
}

.footer img {
  display: block;
  margin: 0 auto;
  padding: 5rem 0 4.75rem;
}

.footer-menu {
  /* border: 2px solid white; */
  margin: 0 auto;
  text-align: center;
}

.footer a {
  color: var(--grey-blue);
  font-size: 1rem;
}

.footer-categories {
  color: var(--white);
}

.footer-category-1, .footer-category-2 {
  margin-bottom: 3em;
}

.footer-category-3 {
  margin-bottom: 2.5em;
}

.footer ul li {
  margin-bottom: 1em;
}

.attribution {
  color: whitesmoke;
  font-size: .75rem;
  padding: 1em;
  text-align: center;
}

.attribution a {
  font-size: .75rem;
}

